--- a/META.yml
+++ b/META.yml
@@ -110,7 +110,7 @@ provides:
     version: 0
   Thrift::Parser:
     file: lib/Thrift/Parser.pm
-    version: 0.01
+    version: 0.02
   Thrift::Parser::Exceptions:
     file: lib/Thrift/Parser/Exceptions.pm
     version: 0
@@ -188,10 +188,11 @@ requires:
   Class::Accessor::Grouped: 0
   Class::Data::Accessor: 0
   Class::ISA: 0
+  Exception::Class: 0
   Parse::RecDescent: 0
   Thrift: 0
 resources:
   bugtracker: http://github.com/ewaters/thrift-parser/issues?labels=bug
   license: http://dev.perl.org/licenses/
   repository: http://github.com/ewaters/thrift-parser
-version: 0.01
+version: 0.02
